--- a/index.html
+++ b/index.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   
   <title>Frontend Mentor | Calculator app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
-<body>
-
-
+<body id="body" class="theme1">
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+
+
+  <div class="container">
+    <div class="calculator">
+      <div class="head-themes">
+        <div class="calc"><p>calc</p></div>
+        <div class="theme"><p>Theme</p></div>
+        <div class="switch">
+          <div class="switch-number"><p>1</p><p>2</p><p>3</p></div>
+          <div class="theme-radios">
+            <input type="radio"   name="theme" id="theme1">
+            <input type="radio"   name="theme" id="theme2">
+            <input type="radio"   name="theme" id="theme3">
+          </div>
+        </div>
+      </div>
+      <div class="display"></div>
+      <div class="keyboard"></div>
+    </div>
   </div>
+
+
+<script src="index.js"></script>
 </body>
 </html>
