--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     <div class="calculator">
       <div class="head-themes">
         <div class="calc"><p>calc</p></div>
-        <div class="theme"><p>Theme</p></div>
+        <div class="theme"><p>THEME</p></div>
         <div class="switch">
           <div class="switch-number"><p>1</p><p>2</p><p>3</p></div>
           <div class="theme-radios">
-            <input type="radio"   name="theme" id="theme1">
-            <input type="radio"   name="theme" id="theme2">
-            <input type="radio"   name="theme" id="theme3">
+            <button type="radio"   name="theme" id="theme1">
+            <button type="radio"   name="theme" id="theme2">
+            <button type="radio"   name="theme" id="theme3">
           </div>
         </div>
       </div>
-      <div class="display"></div>
+      <div class="display"><p>399,981</p></div>
       <div class="keyboard"></div>
     </div>
   </div>
