--- a/index.html
+++ b/index.html
@@ -32,7 +32,33 @@
         </div>
       </div>
       <div class="display"><p>399,981</p></div>
-      <div class="keyboard"></div>
+      <div class="keyboard">
+        <button class="number seven" id="7">7</button>
+        <button class="number eight" id="8">8</button>
+        <button class="number nine" id="9">9</button>
+        <button class="operator del" id="clear">DEL</button>
+
+        <button class="number four" id="4">4</button>
+        <button class="number five" id="5">5</button>
+        <button class="number six" id="6">6</button>
+        <button class="operator plus" id="+">+</button>
+
+        <button class="number one" id="1">1</button>
+        <button class="number two" id="2">2</button>
+        <button class="number three" id="3">3</button>        
+        <button class="operator minus" id="-">-</button>
+
+        <button class="number zero" id="0">0</button>
+        <button class="point point" id="point">.</button>
+        <button class="operator slash" id="/">&#247;</button>
+        <button class="operator times" id="*">&times;</button>
+
+
+        <button class="operator reset" id="backspace">RESET</button>
+
+        <button class="operator equals" id="=">=</button>
+
+      </div>
     </div>
   </div>
 
