--- a/index.html
+++ b/index.html
@@ -31,12 +31,24 @@
           </div>
         </div>
       </div>
-      <div class="display"><p>399,981</p></div>
+      <div class="display">
+        <p>
+          <div id="result">
+            <div id="history">
+              <p id="history-value"></p>
+            </div>
+            <div id="output">
+              <p id="output-value"></p>
+            </div>
+          </div>
+  
+        </p>
+      </div>
       <div class="keyboard">
         <button class="number seven" id="7">7</button>
         <button class="number eight" id="8">8</button>
         <button class="number nine" id="9">9</button>
-        <button class="operator del" id="clear">DEL</button>
+        <button class="operator del" id="backspace">DEL</button>
 
         <button class="number four" id="4">4</button>
         <button class="number five" id="5">5</button>
@@ -49,13 +61,12 @@
         <button class="operator minus" id="-">-</button>
 
         <button class="number zero" id="0">0</button>
-        <button class="point point" id="point">.</button>
-        <button class="operator slash" id="/">&#247;</button>
+        <button class="operator point" id=".">.</button>
+        <button class="operator slash" id="/">/</button>
         <button class="operator times" id="*">&times;</button>
 
 
-        <button class="operator reset" id="backspace">RESET</button>
-
+        <button class="operator reset" id="clear">RESET</button>
         <button class="operator equals" id="=">=</button>
 
       </div>
